--- a/Core/Detail/Presentation/AccountDetailViewController.xib
+++ b/Core/Detail/Presentation/AccountDetailViewController.xib
@@ -11,8 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AccountDetailViewController" customModule="Core" customModuleProvider="target">
             <connections>
-                <outlet property="cardView" destination="1bK-sR-7P8" id="bhK-UM-PpF"/>
-                <outlet property="tableView" destination="8ux-Kj-U5w" id="nHP-uv-VgH"/>
+                <outlet property="loadingView" destination="lfq-Xx-Pmc" id="q3R-Xw-Jqy"/>
+                <outlet property="stackView" destination="YEd-Iy-jzy" id="it0-Xz-MB8"/>
+                <outlet property="tableView" destination="8ux-Kj-U5w" id="RyN-6G-FIA"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,29 +22,31 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1bK-sR-7P8" customClass="CardView" customModule="Core" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="20" width="375" height="175"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="175" id="sb0-YQ-Hxv"/>
-                    </constraints>
-                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8ux-Kj-U5w">
-                    <rect key="frame" x="0.0" y="195" width="375" height="472"/>
+                    <rect key="frame" x="0.0" y="175" width="375" height="492"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="lfq-Xx-Pmc">
+                    <rect key="frame" x="178" y="411" width="20" height="20"/>
+                </activityIndicatorView>
+                <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="175" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YEd-Iy-jzy">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="175"/>
+                </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8ux-Kj-U5w" secondAttribute="trailing" id="4CJ-Do-3O9"/>
-                <constraint firstItem="1bK-sR-7P8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="LEp-0l-Rzy"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="1bK-sR-7P8" secondAttribute="trailing" id="RNY-nM-nKv"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="8ux-Kj-U5w" secondAttribute="bottom" id="VXl-an-0Qd"/>
-                <constraint firstItem="1bK-sR-7P8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="icp-mL-j4K"/>
-                <constraint firstItem="8ux-Kj-U5w" firstAttribute="top" secondItem="1bK-sR-7P8" secondAttribute="bottom" id="mGQ-Nu-VXj"/>
-                <constraint firstItem="8ux-Kj-U5w" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ozO-6B-Cnf"/>
+                <constraint firstItem="lfq-Xx-Pmc" firstAttribute="centerX" secondItem="8ux-Kj-U5w" secondAttribute="centerX" id="13r-iM-u02"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8ux-Kj-U5w" secondAttribute="trailing" id="Jru-Ca-Jiq"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="YEd-Iy-jzy" secondAttribute="trailing" id="KrV-0m-YPf"/>
+                <constraint firstItem="YEd-Iy-jzy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="S66-uM-kRp"/>
+                <constraint firstItem="8ux-Kj-U5w" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="WTJ-M8-7f2"/>
+                <constraint firstItem="lfq-Xx-Pmc" firstAttribute="centerY" secondItem="8ux-Kj-U5w" secondAttribute="centerY" id="j6e-ym-U0T"/>
+                <constraint firstItem="8ux-Kj-U5w" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="sv5-Sw-3sE"/>
+                <constraint firstItem="YEd-Iy-jzy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="tel-Nq-I3W"/>
+                <constraint firstItem="8ux-Kj-U5w" firstAttribute="top" secondItem="YEd-Iy-jzy" secondAttribute="bottom" id="x1K-GC-VNr"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="33.5" y="124.5"/>
         </view>
     </objects>
 </document>
