--- a/Core/List/Presentation/AccountCell.xib
+++ b/Core/List/Presentation/AccountCell.xib
@@ -19,10 +19,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="337" height="192.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YX0-OL-g8b">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YX0-OL-g8b">
                         <rect key="frame" x="0.0" y="0.0" width="337" height="192.5"/>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GradientA" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-0X-UgM" userLabel="GradientView">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GradientA" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-0X-UgM" userLabel="GradientView">
                         <rect key="frame" x="0.0" y="0.0" width="337" height="192.5"/>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dgT-E1-GiL">
