--- a/Core/Detail/Presentation/AccountDetailViewController.xib
+++ b/Core/Detail/Presentation/AccountDetailViewController.xib
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="emptyContentModeLabel" destination="EDk-H2-0aJ" id="aGK-mQ-MeA"/>
                 <outlet property="loadingView" destination="lfq-Xx-Pmc" id="q3R-Xw-Jqy"/>
+                <outlet property="segmentedControl" destination="WK6-2r-3jm" id="fXd-3L-tzo"/>
                 <outlet property="stackView" destination="YEd-Iy-jzy" id="it0-Xz-MB8"/>
                 <outlet property="tableView" destination="8ux-Kj-U5w" id="RyN-6G-FIA"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -24,17 +25,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8ux-Kj-U5w">
-                    <rect key="frame" x="0.0" y="115" width="375" height="552"/>
+                    <rect key="frame" x="0.0" y="163" width="375" height="504"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="lfq-Xx-Pmc">
-                    <rect key="frame" x="178" y="381" width="20" height="20"/>
+                    <rect key="frame" x="178" y="405" width="20" height="20"/>
                 </activityIndicatorView>
                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="115" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YEd-Iy-jzy">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="115"/>
                 </stackView>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="WK6-2r-3jm">
+                    <rect key="frame" x="20" y="135" width="335" height="29"/>
+                    <segments>
+                        <segment title="ALL"/>
+                        <segment title="DEBITS"/>
+                        <segment title="CREDITS"/>
+                    </segments>
+                </segmentedControl>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EDk-H2-0aJ">
-                    <rect key="frame" x="166" y="141" width="43.5" height="21"/>
+                    <rect key="frame" x="166" y="199" width="43.5" height="21"/>
                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -45,16 +54,20 @@
                 <constraint firstItem="lfq-Xx-Pmc" firstAttribute="centerX" secondItem="8ux-Kj-U5w" secondAttribute="centerX" id="13r-iM-u02"/>
                 <constraint firstItem="EDk-H2-0aJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="36" id="1To-99-sKy"/>
                 <constraint firstItem="EDk-H2-0aJ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="1f1-mP-t2v"/>
-                <constraint firstItem="EDk-H2-0aJ" firstAttribute="top" secondItem="YEd-Iy-jzy" secondAttribute="bottom" constant="26" id="89E-WI-Ld9"/>
+                <constraint firstItem="WK6-2r-3jm" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3qS-g6-vbr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8ux-Kj-U5w" secondAttribute="trailing" id="Jru-Ca-Jiq"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="YEd-Iy-jzy" secondAttribute="trailing" id="KrV-0m-YPf"/>
                 <constraint firstItem="YEd-Iy-jzy" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="S66-uM-kRp"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="EDk-H2-0aJ" secondAttribute="trailing" constant="36" id="VR8-nE-7hY"/>
                 <constraint firstItem="8ux-Kj-U5w" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="WTJ-M8-7f2"/>
+                <constraint firstItem="8ux-Kj-U5w" firstAttribute="top" secondItem="WK6-2r-3jm" secondAttribute="bottom" id="X8a-vo-Tie"/>
+                <constraint firstItem="WK6-2r-3jm" firstAttribute="top" secondItem="YEd-Iy-jzy" secondAttribute="bottom" constant="20" id="Xdv-YJ-vIn"/>
+                <constraint firstItem="EDk-H2-0aJ" firstAttribute="top" secondItem="WK6-2r-3jm" secondAttribute="bottom" constant="36" id="YTm-GT-4n2"/>
+                <constraint firstItem="WK6-2r-3jm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="aJb-ky-a0s"/>
                 <constraint firstItem="lfq-Xx-Pmc" firstAttribute="centerY" secondItem="8ux-Kj-U5w" secondAttribute="centerY" id="j6e-ym-U0T"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="WK6-2r-3jm" secondAttribute="trailing" constant="20" id="pu4-pY-ihx"/>
                 <constraint firstItem="8ux-Kj-U5w" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="sv5-Sw-3sE"/>
                 <constraint firstItem="YEd-Iy-jzy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="tel-Nq-I3W"/>
-                <constraint firstItem="8ux-Kj-U5w" firstAttribute="top" secondItem="YEd-Iy-jzy" secondAttribute="bottom" id="x1K-GC-VNr"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="33.5" y="124.5"/>
